--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
+  background: #f4f7fa;
+  color: #424242;
+  font-family: "Noto Sans", sans-serif;
+  min-height: 100vh;
+}
+
+.App-header {
+  background-color: #e85761;
+  display: flex;
+  padding-left: 20px;
+  color: white;
+  height: 3rem;
+  align-items: center;
 }
