--- a/src/components/ProgressBar/styles.css
+++ b/src/components/ProgressBar/styles.css
@@ -2,17 +2,31 @@
   position: relative;
 }
 
+.progress-bar__whcoverage {
+  margin-right: 2px;
+  color: #9e9e9e;
+  font-weight: 600;
+  font-size: 25px;
+}
+
+.progress-bar__percent {
+  position: relative;
+  top: -7px;
+  color: #9e9e9e;
+  font-weight: bold;
+}
+
+.progress-bar__stockout {
+  color: #9e9e9e87;
+  font-size: 13px;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
 .progress-bar__div {
   height: 10px;
   position: absolute;
   border-radius: 50px;
-}
-
-.progress-bar__whcoverage {
-  padding: 5px;
-  color: #9e9e9e;
-  font-weight: 600;
-  font-size: 25px;
 }
 
 .progress-bar__div-empty {
