--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans);
 
+:root {
+  --light-gray: #9e9e9e;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
