--- a/src/components/ProductCard/styles.css
+++ b/src/components/ProductCard/styles.css
@@ -66,7 +66,7 @@
 
 .card-data__code {
   font-size: 13px;
-  color: #9e9e9e;
+  color: var(--light-gray);
 }
 
 .card-data__name {
@@ -75,7 +75,7 @@
 
 .card-data__price {
   margin: 20px 0 20px;
-  color: #9e9e9e;
+  color: var(--light-gray);
 }
 
 .card-data__chart {
